# vqwBat2_ws

./: .gitignore  ipRoutes.bash  myLaunch.bash  myPkgCreate.bash  myPkgCreate_lib.bash  myPkgCreate_node.bash  vqwBat2_ws.code-workspace
src/bq25820/: CMakeLists.txt  package.xml
src/bq25820/include/bq25820/: bq25820.hpp  bq25820_Registers.hpp  bq25820_gpio.hpp  bq25820_i2c.hpp  elapsedMillis.h  vqw_debug.hpp
src/bq25820/src/: bq25820.cpp  elapsedMillis.cpp
src/bq25820_node/: CMakeLists.txt  package.xml
src/bq25820_node/docs/: Doxyfile  conf.py  index.rst  requirements.txt
src/bq25820_node/include/bq25820_node/: bq25820_node.hpp
src/bq25820_node/src/: bq25820_node.cpp
src/vqw_lifecycle_manager/: CMakeLists.txt  package.xml
src/vqw_lifecycle_manager/include/vqw_lifecycle_manager/: LifecycleManager.hpp  node_map.hpp
src/vqw_lifecycle_manager/src/: LifecycleManager.cpp  node_map.cpp
src/vqwbat2_bringup/: CMakeLists.txt  package.xml
src/vqwbat2_bringup/launch/: bq25820_component.launch.py  bq25820_node.launch.py
